Bug 233259 - Kgpg crashes after clicking "Cancel" in the Save Dialog
Summary: Kgpg crashes after clicking "Cancel" in the Save Dialog
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-04 17:22 UTC by Carli* Freudenberg
Modified: 2010-05-06 08:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.4.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carli* Freudenberg 2010-04-04 17:22:11 UTC
Application: kgpg (2.3.0)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.31-gentoo-r10 i686
Distribution (Platform): Gentoo Packages

-- Information about the crash:
The crashs occurs on exiting Kgpg.
When I choose "Save" and "Cancel" the upcomming Dialog KGPG crashes. 

It would be nice the have a button "Save encrypted" wich encrypes the file and stores it under the same location like the encrypted file opened.

Thank you :-)


 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
[KCrash Handler]
#5  0xb5f80cf4 in QUrl::QUrl(QUrl const&) () from /usr/lib/qt4/libQtCore.so.4
#6  0xb623c10a in KUrl (this=0xbfa28518, _u=...) at /var/tmp/portage/kde-base/kdelibs-4.4.2/work/kdelibs-4.4.2/kdecore/io/kurl.cpp:472
#7  0x0807b823 in KgpgEditor::slotFileSaveAs (this=0x9533c80) at /var/tmp/portage/kde-base/kgpg-4.4.2/work/kgpg-4.4.2/kgpg/editor/kgpgeditor.cpp:341
#8  0x0807b438 in KgpgEditor::slotFileSave (this=0x9533c80) at /var/tmp/portage/kde-base/kgpg-4.4.2/work/kgpg-4.4.2/kgpg/editor/kgpgeditor.cpp:292
#9  0x0807bfcb in KgpgEditor::saveBeforeClear (this=0x9533c80) at /var/tmp/portage/kde-base/kgpg-4.4.2/work/kgpg-4.4.2/kgpg/editor/kgpgeditor.cpp:254
#10 0x0807c037 in KgpgEditor::queryClose (this=0x9533c80) at /var/tmp/portage/kde-base/kgpg-4.4.2/work/kgpg-4.4.2/kgpg/editor/kgpgeditor.cpp:232
#11 0xb717c851 in KMainWindow::closeEvent (this=0x9533c80, e=0xbfa28e04) at /var/tmp/portage/kde-base/kdelibs-4.4.2/work/kdelibs-4.4.2/kdeui/widgets/kmainwindow.cpp:597
#12 0xb65ac13d in QWidget::event(QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#13 0xb69d91bc in QMainWindow::event(QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#14 0xb717bf97 in KMainWindow::event (this=0x9533c80, ev=0xbfa28e04) at /var/tmp/portage/kde-base/kdelibs-4.4.2/work/kdelibs-4.4.2/kdeui/widgets/kmainwindow.cpp:1103
#15 0xb71c230d in KXmlGuiWindow::event (this=0x9533c80, ev=0xbfa28e04) at /var/tmp/portage/kde-base/kdelibs-4.4.2/work/kdelibs-4.4.2/kdeui/xmlgui/kxmlguiwindow.cpp:131
#16 0xb654aa9c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#17 0xb655250d in QApplication::notify(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#18 0xb708af9e in KApplication::notify (this=0x9294c40, receiver=0x9533c80, event=0xbfa28e04) at /var/tmp/portage/kde-base/kdelibs-4.4.2/work/kdelibs-4.4.2/kdeui/kernel/kapplication.cpp:302
#19 0xb5fd551d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#20 0xb655a30e in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#21 0xb65b148c in QWidgetPrivate::close_helper(QWidgetPrivate::CloseMode) () from /usr/lib/qt4/libQtGui.so.4
#22 0xb65cf6f3 in QApplication::x11ClientMessage(QWidget*, _XEvent*, bool) () from /usr/lib/qt4/libQtGui.so.4
#23 0xb65e105a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/qt4/libQtGui.so.4
#24 0xb660e414 in ?? () from /usr/lib/qt4/libQtGui.so.4
#25 0xb57a8f1b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x0929b494 in ?? ()
#27 0x0929c1e8 in ?? ()
#28 0xb58473b8 in ?? () from /usr/lib/libglib-2.0.so.0
#29 0xb58473e0 in ?? () from /usr/lib/libglib-2.0.so.0
#30 0xb660e1f0 in ?? () from /usr/lib/qt4/libQtGui.so.4
#31 0x00000000 in ?? ()

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2010-04-04 17:40:30 UTC
SVN commit 1110991 by dakon:

fix crash when saving editor file was cancelled

BUG:233259

 M  +5 -2      kgpgeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1110991
Comment 2 Rolf Eike Beer 2010-04-04 17:43:09 UTC
SVN commit 1110994 by dakon:

fix crash when saving editor file was cancelled

BUG:233259

backport of r1110991


 M  +5 -2      kgpgeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1110994