fix crash when saving editor file was cancelled

BUG:233259

backport of r1110991

svn path=/branches/KDE/4.4/kdeutils/kgpg/; revision=1110994